# docs

./: .buildinfo  .gitignore  .readthedocs.yaml  404.html  Cargo.toml  Makefile  README.html  README.md  SUMMARY.html  backwards_compatibility.html  book.toml  chapter_1.html  comparison.html  data_structures.html  definitions.html  design.html  discovery.html  encryption.html  evolvability.html  federation.html  genindex.html  identity.html  index.html  main.rs  objects.inv  out_of_scope.html  overview.html  p2p_concepts.html  p2p_ld_docs.bib  print.html  protocol.html  pyproject.toml  querying.html  references.html  roadmap.html  search.html  searchindex.js  searchindex.json  sketchpad.html  todo.html  (+3 more)
_sources/: SUMMARY.md.txt  comparison.md.txt  data_structures.md.txt  definitions.md.txt  design.md.txt  discovery.md.txt  encryption.md.txt  federation.md.txt  identity.md.txt  index.md.txt  index.rst.txt  overview.md.txt  p2p_concepts.md.txt  protocol.md.txt  querying.md.txt  roadmap.md.txt  sketchpad.md.txt  translation.md.txt  vocabulary.md.txt
_static/: pygments.css
adapter/: index.html
codecs/: hdf5.html  index.html
comparison/: activitypub.html  at_protocol.html  bittorrent.html  dmc.html  eris.html  hypercore.html  index.html  ipfs.html  ld_fragments.html  ld_platform.html  matrix.html  nanopubs.html  nostr.html  solid.html  spritely.html  ssb.html  xmpp.html
src/: README.md  SUMMARY.md  backwards_compatibility.md  build.rs  conf.py  data_structures.md  definitions.md  design.md  discovery.md  encryption.md  evolvability.md  federation.md  identity.md  (+11 more)
(+75 files in other folders)
