[package]
name = "docs"
version = "0.1.0"
edition = "2021"
authors = ["Jonny Saunders <j@nny.fyi>"]
documentation = "https://piracy.solutions/docs"
readme="README.md"
homepage = "https://piracy.solutions/docs"
repository = "https://github.com/p2p-ld/docs"
exclude = ["/book"]
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
mdbook = "0.4.30"
mdbook-bib = "0.0.5"
mdbook-mermaid = "0.12.6"
