[tool.poetry]
name = "p2p-ld"
version = "0.1.0"
description = "A p2p protocol for linked data"
authors = ["sneakers-the-rat <JLSaunders987@gmail.com>"]
license = "CC-BY"
readme = "README.md"
packages = [{include = "p2p_ld"}]

[tool.poetry.dependencies]
python = "^3.11"
sphinx = "^6.2.1"
myst-parser = "^1.0.0"
furo = "^2023.5.20"
sphinxcontrib-mermaid = "^0.9.2"


[tool.poetry.group.dev.dependencies]
sphinx-autobuild = "^2021.3.14"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
